@startuml lab-10-loan-application-state-after
title Lab 10 UML State — Loan Application
[*] --> Draft
Draft --> Submitted : Customer starts application
Submitted --> Scoring : Mobile App submits
Scoring --> OfferReady : Credit Score returned
Scoring --> Failed : timeout [CON.3]
OfferReady --> Approved : Customer accepts agreement
OfferReady --> Rejected : policy breach [CON.1]
Approved --> AccountValidated : account confirmed
Approved --> Failed : validation failure [CON.4]
AccountValidated --> Disbursed : Core Banking confirms
AccountValidated --> Failed : posting failure [CON.4]
Rejected --> [*]
Disbursed --> [*]
Failed --> [*]
@enduml
